--- a/html/starter.html
+++ b/html/starter.html
@@ -130,8 +130,12 @@
 	 	</pre>
 	</div>
 
-	<script type="text/javascript" src="../js/starter.js"></script>
+	<script
+	src="https://code.jquery.com/jquery-3.6.4.min.js"
+	integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8="
+	crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
+	<script type="text/javascript" src="../js/starter.js"></script>
 	<script type="text/javascript" src="../js/error.js"></script>
 	<script type="text/javascript" src="../js/async.js"></script>
 	
