--- a/html/starter.html
+++ b/html/starter.html
@@ -131,9 +131,7 @@
 	</div>
 
 	<script
-	src="https://code.jquery.com/jquery-3.6.4.min.js"
-	integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8="
-	crossorigin="anonymous"></script>
+	src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
 	<script type="text/javascript" src="../js/starter.js"></script>
 	<script type="text/javascript" src="../js/error.js"></script>
