--- a/html/starter.html
+++ b/html/starter.html
@@ -65,7 +65,7 @@
 					</div>
 				</div>
 				<div id="page_titles_table">
-	<div id="page1"><div><input type="text" name="description" placeholder="page_title" value="Homepage"/></div><div id="radioButtons1"><div><input type="radio" name="radio1" class="radio" value="first" checked required></div><div><input type="radio" name="radio1" value="second" class="radio" required></div></div><div><input type="url" name="page_url" placeholder="page_url" /></div></div>
+	<div id="page1"><div><input type="text" name="description" placeholder="page_title" value="Homepage"/></div><div><input type="radio" name="radio1" class="radio" value="first" required></div><div><input type="radio" name="radio1" value="second" class="radio" required></div><div><input type="url" name="page_url" placeholder="page_url" /></div></div>
 				</div>
 				</div>
 			</div>
