Errors Message Header CSS

--- a/html/starter.html
+++ b/html/starter.html
@@ -150,7 +150,7 @@
 
 		</div>
 		<div class="hlayout">
-			<div class="messages-header">errors</div>
+			<div class="messages-header">Errors</div>
 			<div class="messages error-block"></div>
 		</div>
 	</div>
