Foundation of Project Completed - 2023.05.10

--- a/html/starter.html
+++ b/html/starter.html
@@ -119,28 +119,27 @@
 					</div>
 					<div id="videos_table">
 						<div class='media_table'>
-							<div><input type='text' id='video_title' name='video_title' placeholder='video_title' />
+							<div><input type='text' id='video_title' name='video_title' placeholder='video_title' value='Title and Description' />
 							</div>
 							<div><input type='text' id='video_thumbnail_image_name' name='video_thumbnail_image_name'
-									placeholder='video_thumbnail_image_name' /></div>
+									placeholder='video_thumbnail_image_name'  value='mediaFPO.png' /></div>
 							<div><input type='text' id='video_poster_image_name' name='video_poster_image_name'
-									placeholder='video_poster_image_name' /></div>
+									placeholder='video_poster_image_name'  value='mediaFPO.png' /></div>
 							<div><input type='text' id='video_duration' name='video_duration'
-									placeholder='video_duration' /></div>
+									placeholder='video_duration' value="00:30" /></div>
 						</div>
 					</div>
-					<p class="disclaimer">* If video duration is unknown, or using template video, simply type "stock"
-					</p>
+
 					<div id="audios_table">
 						<div class='media_table'>
-							<div><input type='text' id='audio_title' name='audio_title' placeholder='audio_title' />
+							<div><input type='text' id='audio_title' name='audio_title' placeholder='audio_title' value='Title and Description' />
 							</div>
 							<div><input type='text' id='audio_thumbnail_image_name' name='audio_thumbnail_image_name'
-									placeholder='audio_thumbnail_image_name' /></div>
+									placeholder='audio_thumbnail_image_name'  value='mediaFPO.png'/></div>
 							<div><input type='text' id='audio_poster_image_name' name='audio_poster_image_name'
 									placeholder='audio_poster_image_name' /></div>
 							<div><input type='text' id='audio_duration' name='audio_duration'
-									placeholder='audio_duration' /></div>
+									placeholder='audio_duration' value="05:48"/></div>
 						</div>
 					</div>
 				</div>
