Starter HTML for Company

--- a/starter.html
+++ b/starter.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="/css/starter.css">
 	<title>Infosite Starter Tool</title>
 </head>
-<!-- Use this file sits only for server -->
+<!-- Use this file only for server -->
 <body>
 	<div class="flex-container">
 		<div class="infosite_tool_layout">
