Update to HTML to add headers to Videos and Audios

--- a/html/starter.html
+++ b/html/starter.html
@@ -118,6 +118,7 @@
 								placeholder="number_of_audios" oninput="getNumberOfAudio()" /></div>
 					</div>
 					<div id="videos_table">
+						<div>Video 1</div>
 						<div class='media_table'>
 							<div><input type='text' id='video_title' name='video_title' placeholder='video_title' value='Title and Description' />
 							</div>
@@ -131,6 +132,7 @@
 					</div>
 
 					<div id="audios_table">
+						<div>Audio 1</div>
 						<div class='media_table'>
 							<div><input type='text' id='audio_title' name='audio_title' placeholder='audio_title' value='Title and Description' />
 							</div>
