--- a/html/starter.html
+++ b/html/starter.html
@@ -139,7 +139,7 @@
 							<div><input type='text' id='audio_thumbnail_image_name' name='audio_thumbnail_image_name'
 									placeholder='audio_thumbnail_image_name'  value='mediaFPO.png'/></div>
 							<div><input type='text' id='audio_poster_image_name' name='audio_poster_image_name'
-									placeholder='audio_poster_image_name' /></div>
+									placeholder='audio_poster_image_name' value='mediaFPO.png' /></div>
 							<div><input type='text' id='audio_duration' name='audio_duration'
 									placeholder='audio_duration' value="05:48"/></div>
 						</div>
