--- a/starter.html
+++ b/starter.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="/css/starter.css">
+	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<title>Infosite Starter Tool</title>
 </head>
 <!-- Use this file only for server -->
