JSON Update; Polls Updated

--- a/starter.html
+++ b/starter.html
@@ -167,8 +167,11 @@
           <h3>Polls</h3>
           <div id="infosite_poll">
             <h3>Number of Polls</h3>
-
+            <div>Are there Polls?</div>
+            <div>Yes&nbsp;<input type="radio" name="poll-yes" id="poll-yes" value="Yes"></div>
+            <div>No&nbsp;<input type="radio" name="poll-no" id="poll-no" value="No" checked></div>
             <div class="polls-section">
+             
               <label for="poll">Poll ID No.</label>
               <div>
                 <input
