--- a/starter.html
+++ b/starter.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html>
 
 <head>
@@ -49,7 +50,7 @@
             <div>
               <div>
                 <select id="number_of_pages" name="number_of_pages" onclick="changePages()">
-                  <option value="1" selected>1</option>
+                  <option value="1">1</option>
                   <option value="2">2</option>
                   <option value="3">3</option>
                   <option value="4">4</option>
