CSS updates to header tags

--- a/starter.html
+++ b/starter.html
@@ -20,6 +20,8 @@
       <h4><em>*Basic Kit for Initial Infosite Build</em></h4>
 
       <form action="?" id="infosite_starter_form" name="infosite_starter_form" method="POST">
+        <h3>Tracking</h3>
+
         <div id="infosite_tracking">
           <div>
             <label for="tracking_sfnumber">SF#</label>
@@ -42,7 +44,7 @@
             <input type="text" id="tracking_CP_activityId" name="activityId" placeholder="activityId" />
           </div>
         </div>
-        <h2>Infosite Template</h2>
+        <h3>Article Pages</h3>
 
         <div id="infosite_page_module">
           <h3>Number of Article Pages</h3>
