change dir if image is in template or instance

--- a/starter.html
+++ b/starter.html
@@ -17,7 +17,7 @@
   <div class="flex-container">
     <div class="infosite_tool_layout">
       <h1>Infosite Starter Tool</h1>
-      <h4><em>*Basic Kit for Initial Infosite Build</em></h4>
+      <h4><em>*JSON Package for Initial Infosite Build</em></h4>
 
       <form action="?" id="infosite_starter_form" name="infosite_starter_form" method="POST">
         <h3>Tracking</h3>
