Video and Audio Playlist Update

--- a/starter.html
+++ b/starter.html
@@ -139,6 +139,7 @@
           </div>
         </div>
         <h3>Video and Audio</h3>
+        <div>*default values are supplied</div>
         <div id="infosite_number_of_media">
           <div>
             <label for="number_of_videos">Number of Video Media</label>
@@ -156,22 +157,22 @@
           </div>
           <div id="videos_table">
             <div>Video 1</div>
+            
             <div class="media_table">
               <div>
-                <input type="text" id="video_title" name="video_title" placeholder="video_title"
-                  value="Title and Description" />
+                <input type="text" id="video_title" name="video_title" placeholder="Enter Title" />
               </div>
               <div>
-                <input type="text" id="video_thumbnail_image_name" name="video_thumbnail_image_name"
-                  placeholder="video_thumbnail_image_name" value="mediaFPO.png" />
+                <input type="text" id="video_thumbnail_image_name" name="video_thumbnail_image_name" placeholder="Enter Thumbnail Filename" />
               </div>
               <div>
-                <input type="text" id="video_poster_image_name" name="video_poster_image_name"
-                  placeholder="video_poster_image_name" value="mediaFPO.png" />
+                <input type="text" id="video_poster_image_name" name="video_poster_image_name" placeholder="Enter Poster Filename"/>
               </div>
               <div>
-                <input type="text" id="video_duration" name="video_duration" placeholder="video_duration"
-                  value="00:30" />
+                <input type="text" id="video__url" name="video__url" placeholder="Enter Fragment URL" />
+              </div>
+              <div>
+                <input type="text" id="video_duration" name="video_duration" placeholder="Enter Video Duration" />
               </div>
             </div>
           </div>
@@ -180,20 +181,20 @@
             <div>Audio 1</div>
             <div class="media_table">
               <div>
-                <input type="text" id="audio_title" name="audio_title" placeholder="audio_title"
-                  value="Title and Description" />
+                <input type="text" id="audio_title" name="audio_title" placeholder="Enter Title" />
               </div>
               <div>
-                <input type="text" id="audio_thumbnail_image_name" name="audio_thumbnail_image_name"
-                  placeholder="audio_thumbnail_image_name" value="mediaFPO.png" />
+                <input type="text" id="audio_thumbnail_image_name" name="audio_thumbnail_image_name" placeholder="Enter Thumbnail Filename" />
               </div>
               <div>
-                <input type="text" id="audio_poster_image_name" name="audio_poster_image_name"
-                  placeholder="audio_poster_image_name" value="mediaFPO.png" />
+                <input type="text" id="audio_poster_image_name" name="audio_poster_image_name" placeholder="Enter Poster Filename" />
               </div>
               <div>
-                <input type="text" id="audio_duration" name="audio_duration" placeholder="audio_duration"
-                  value="05:48" />
+                <input type="text" id="audio__url" name="audio__url"
+                placeholder="Enter Fragment URL"/>
+              </div>
+              <div>
+                <input type="text" id="audio_duration" name="audio_duration" placeholder="Enter Audio Duration" />
               </div>
             </div>
           </div>
