Exploring the use of Python

--- a/starter.html
+++ b/starter.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="/css/starter.css" />
   <!-- updated for internal server-->
   <link rel="icon" type="image/x-icon" href="/css/favicon.ico" />
+  <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
   <!-- updated for internal server-->
   <title>Infosite Starter Tool</title>
 </head>
@@ -244,6 +245,9 @@
   <script type="text/javascript" src="/js/starter.js"></script>
   <script type="text/javascript" src="/js/error.js"></script>
   <script type="text/javascript" src="/js/async.js"></script>
+  <py-script>
+    
+  </py-script>
 </body>
 
 </html>
